preview/pr-117/deploy/deployment-simple-nginx.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-nginx
  labels:
    app: simple-nginx
    app.openshift.io/runtime: nginx
    app.kubernetes.io/part-of: simple-nginx
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: simple-nginx
  template:
    metadata:
      labels:
        app: simple-nginx
    spec:
      automountServiceAccountToken: false
      volumes:
        - name: docroot
          emptyDir: {}
      containers:
        - image: registry.access.redhat.com/ubi9/nginx-122:latest
          name: nginx
          ports:
            - name: http
              containerPort: 8080
          securityContext:
            readOnlyRootFilesystem: false
          livenessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          resources:
            limits:
              ephemeral-storage: 40Mi
              cpu: 0.5
              memory: "256Mi"
            requests:
              ephemeral-storage: 20Mi
              cpu: 0.5
              memory: "256Mi"
          volumeMounts:
            - name: docroot
              mountPath: /opt/app-root/src/
          command:
            - /bin/sh
            - -c
            - |

              set -x

              echo "Greetings from $POD_NAME" >> /opt/app-root/src/index.html
              /usr/libexec/s2i/run
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simple-nginx
  name: simple-nginx
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app: simple-nginx
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: simple-nginx
  name: simple-nginx
spec:
  port:
    targetPort: http
  to:
    kind: "Service"
    name: simple-nginx
    weight: null
  tls:
    termination: Edge
    insecureEdgeTerminationPolicy: Redirect
